--- a/package.json
+++ b/package.json
@@ -2,10 +2,16 @@
   "name": "spotsify",
   "private": true,
   "dependencies": {
+    "@hotwired/turbo-rails": "^7.0.0-rc.2",
     "@rails/actioncable": "^6.0.0",
     "@rails/activestorage": "^6.0.0",
     "@rails/ujs": "^6.0.0",
     "@rails/webpacker": "5.4.2",
+    "@tailwindcss/aspect-ratio": "^0.2.1",
+    "@tailwindcss/forms": "^0.3.3",
+    "@tailwindcss/typography": "^0.4.1",
+    "stimulus": "^2.0.0",
+    "tailwindcss": "yarn:@tailwindcss/postcss7-compat",
     "turbolinks": "^5.2.0",
     "webpack": "^4.46.0",
     "webpack-cli": "^3.3.12"
